Clean top-level directory files